--- a/latest/Dockerfile.arm32v6
+++ b/latest/Dockerfile.arm32v6
@@ -12,7 +12,7 @@ CMD ["bash"]
 
 RUN apk update && \
   apk upgrade && \
-  apk add build-base python3-dev python3 py3-pip && \
+  apk add build-base python3-dev python3 py3-pip py3-tox && \
   rm -rf /var/cache/apk/*
 
 COPY ./overlay ./overlay-arm32v6 /
