--- a/.drone.yml
+++ b/.drone.yml
@@ -158,6 +158,322 @@ depends_on:
 
 ---
 kind: pipeline
+name: amd64-3.7
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+- name: dryrun
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.7
+    dockerfile: v3.7/Dockerfile.amd64
+    dry_run: true
+    repo: webhippie/python
+    tags: 3.7-amd64
+  when:
+    event:
+    - pull_request
+
+- name: publish
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.7
+    dockerfile: v3.7/Dockerfile.amd64
+    password:
+      from_secret: docker_password
+    repo: webhippie/python
+    tags: 3.7-amd64
+    username:
+      from_secret: docker_username
+  when:
+    event:
+    - push
+
+trigger:
+  ref:
+  - refs/heads/master
+  - "refs/pull/**"
+
+---
+kind: pipeline
+name: arm32v6-3.7
+
+platform:
+  os: linux
+  arch: arm
+
+steps:
+- name: dryrun
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.7
+    dockerfile: v3.7/Dockerfile.arm32v6
+    dry_run: true
+    repo: webhippie/python
+    tags: 3.7-arm32v6
+  when:
+    event:
+    - pull_request
+
+- name: publish
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.7
+    dockerfile: v3.7/Dockerfile.arm32v6
+    password:
+      from_secret: docker_password
+    repo: webhippie/python
+    tags: 3.7-arm32v6
+    username:
+      from_secret: docker_username
+  when:
+    event:
+    - push
+
+trigger:
+  ref:
+  - refs/heads/master
+  - "refs/pull/**"
+
+---
+kind: pipeline
+name: arm64v8-3.7
+
+platform:
+  os: linux
+  arch: arm64
+
+steps:
+- name: dryrun
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.7
+    dockerfile: v3.7/Dockerfile.arm64v8
+    dry_run: true
+    repo: webhippie/python
+    tags: 3.7-arm64v8
+  when:
+    event:
+    - pull_request
+
+- name: publish
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.7
+    dockerfile: v3.7/Dockerfile.arm64v8
+    password:
+      from_secret: docker_password
+    repo: webhippie/python
+    tags: 3.7-arm64v8
+    username:
+      from_secret: docker_username
+  when:
+    event:
+    - push
+
+trigger:
+  ref:
+  - refs/heads/master
+  - "refs/pull/**"
+
+---
+kind: pipeline
+name: manifest-3.7
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+- name: manifest
+  pull: always
+  image: plugins/manifest:1
+  settings:
+    ignore_missing: true
+    password:
+      from_secret: docker_password
+    spec: v3.7/manifest.tmpl
+    username:
+      from_secret: docker_username
+
+trigger:
+  ref:
+  - refs/heads/master
+
+depends_on:
+- amd64-3.7
+- arm32v6-3.7
+- arm64v8-3.7
+
+---
+kind: pipeline
+name: amd64-2.7
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+- name: dryrun
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v2.7
+    dockerfile: v2.7/Dockerfile.amd64
+    dry_run: true
+    repo: webhippie/python
+    tags: 2.7-amd64
+  when:
+    event:
+    - pull_request
+
+- name: publish
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v2.7
+    dockerfile: v2.7/Dockerfile.amd64
+    password:
+      from_secret: docker_password
+    repo: webhippie/python
+    tags: 2.7-amd64
+    username:
+      from_secret: docker_username
+  when:
+    event:
+    - push
+
+trigger:
+  ref:
+  - refs/heads/master
+  - "refs/pull/**"
+
+---
+kind: pipeline
+name: arm32v6-2.7
+
+platform:
+  os: linux
+  arch: arm
+
+steps:
+- name: dryrun
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v2.7
+    dockerfile: v2.7/Dockerfile.arm32v6
+    dry_run: true
+    repo: webhippie/python
+    tags: 2.7-arm32v6
+  when:
+    event:
+    - pull_request
+
+- name: publish
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v2.7
+    dockerfile: v2.7/Dockerfile.arm32v6
+    password:
+      from_secret: docker_password
+    repo: webhippie/python
+    tags: 2.7-arm32v6
+    username:
+      from_secret: docker_username
+  when:
+    event:
+    - push
+
+trigger:
+  ref:
+  - refs/heads/master
+  - "refs/pull/**"
+
+---
+kind: pipeline
+name: arm64v8-2.7
+
+platform:
+  os: linux
+  arch: arm64
+
+steps:
+- name: dryrun
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v2.7
+    dockerfile: v2.7/Dockerfile.arm64v8
+    dry_run: true
+    repo: webhippie/python
+    tags: 2.7-arm64v8
+  when:
+    event:
+    - pull_request
+
+- name: publish
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v2.7
+    dockerfile: v2.7/Dockerfile.arm64v8
+    password:
+      from_secret: docker_password
+    repo: webhippie/python
+    tags: 2.7-arm64v8
+    username:
+      from_secret: docker_username
+  when:
+    event:
+    - push
+
+trigger:
+  ref:
+  - refs/heads/master
+  - "refs/pull/**"
+
+---
+kind: pipeline
+name: manifest-2.7
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+- name: manifest
+  pull: always
+  image: plugins/manifest:1
+  settings:
+    ignore_missing: true
+    password:
+      from_secret: docker_password
+    spec: v2.7/manifest.tmpl
+    username:
+      from_secret: docker_username
+
+trigger:
+  ref:
+  - refs/heads/master
+
+depends_on:
+- amd64-2.7
+- arm32v6-2.7
+- arm64v8-2.7
+
+---
+kind: pipeline
 name: microbadger-update
 
 platform:
@@ -178,6 +494,8 @@ trigger:
 
 depends_on:
 - manifest-latest
+- manifest-3.7
+- manifest-2.7
 
 ---
 kind: pipeline
@@ -204,5 +522,7 @@ trigger:
 
 depends_on:
 - manifest-latest
+- manifest-3.7
+- manifest-2.7
 
 ...
