--- a/.drone.yml
+++ b/.drone.yml
@@ -316,6 +316,322 @@ depends_on:
 
 ---
 kind: pipeline
+name: amd64-3.6
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+- name: dryrun
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.6
+    dockerfile: v3.6/Dockerfile.amd64
+    dry_run: true
+    repo: webhippie/python
+    tags: 3.6-amd64
+  when:
+    event:
+    - pull_request
+
+- name: publish
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.6
+    dockerfile: v3.6/Dockerfile.amd64
+    password:
+      from_secret: docker_password
+    repo: webhippie/python
+    tags: 3.6-amd64
+    username:
+      from_secret: docker_username
+  when:
+    event:
+    - push
+
+trigger:
+  ref:
+  - refs/heads/master
+  - "refs/pull/**"
+
+---
+kind: pipeline
+name: arm32v6-3.6
+
+platform:
+  os: linux
+  arch: arm
+
+steps:
+- name: dryrun
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.6
+    dockerfile: v3.6/Dockerfile.arm32v6
+    dry_run: true
+    repo: webhippie/python
+    tags: 3.6-arm32v6
+  when:
+    event:
+    - pull_request
+
+- name: publish
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.6
+    dockerfile: v3.6/Dockerfile.arm32v6
+    password:
+      from_secret: docker_password
+    repo: webhippie/python
+    tags: 3.6-arm32v6
+    username:
+      from_secret: docker_username
+  when:
+    event:
+    - push
+
+trigger:
+  ref:
+  - refs/heads/master
+  - "refs/pull/**"
+
+---
+kind: pipeline
+name: arm64v8-3.6
+
+platform:
+  os: linux
+  arch: arm64
+
+steps:
+- name: dryrun
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.6
+    dockerfile: v3.6/Dockerfile.arm64v8
+    dry_run: true
+    repo: webhippie/python
+    tags: 3.6-arm64v8
+  when:
+    event:
+    - pull_request
+
+- name: publish
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.6
+    dockerfile: v3.6/Dockerfile.arm64v8
+    password:
+      from_secret: docker_password
+    repo: webhippie/python
+    tags: 3.6-arm64v8
+    username:
+      from_secret: docker_username
+  when:
+    event:
+    - push
+
+trigger:
+  ref:
+  - refs/heads/master
+  - "refs/pull/**"
+
+---
+kind: pipeline
+name: manifest-3.6
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+- name: manifest
+  pull: always
+  image: plugins/manifest:1
+  settings:
+    ignore_missing: true
+    password:
+      from_secret: docker_password
+    spec: v3.6/manifest.tmpl
+    username:
+      from_secret: docker_username
+
+trigger:
+  ref:
+  - refs/heads/master
+
+depends_on:
+- amd64-3.6
+- arm32v6-3.6
+- arm64v8-3.6
+
+---
+kind: pipeline
+name: amd64-3.5
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+- name: dryrun
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.5
+    dockerfile: v3.5/Dockerfile.amd64
+    dry_run: true
+    repo: webhippie/python
+    tags: 3.5-amd64
+  when:
+    event:
+    - pull_request
+
+- name: publish
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.5
+    dockerfile: v3.5/Dockerfile.amd64
+    password:
+      from_secret: docker_password
+    repo: webhippie/python
+    tags: 3.5-amd64
+    username:
+      from_secret: docker_username
+  when:
+    event:
+    - push
+
+trigger:
+  ref:
+  - refs/heads/master
+  - "refs/pull/**"
+
+---
+kind: pipeline
+name: arm32v6-3.5
+
+platform:
+  os: linux
+  arch: arm
+
+steps:
+- name: dryrun
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.5
+    dockerfile: v3.5/Dockerfile.arm32v6
+    dry_run: true
+    repo: webhippie/python
+    tags: 3.5-arm32v6
+  when:
+    event:
+    - pull_request
+
+- name: publish
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.5
+    dockerfile: v3.5/Dockerfile.arm32v6
+    password:
+      from_secret: docker_password
+    repo: webhippie/python
+    tags: 3.5-arm32v6
+    username:
+      from_secret: docker_username
+  when:
+    event:
+    - push
+
+trigger:
+  ref:
+  - refs/heads/master
+  - "refs/pull/**"
+
+---
+kind: pipeline
+name: arm64v8-3.5
+
+platform:
+  os: linux
+  arch: arm64
+
+steps:
+- name: dryrun
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.5
+    dockerfile: v3.5/Dockerfile.arm64v8
+    dry_run: true
+    repo: webhippie/python
+    tags: 3.5-arm64v8
+  when:
+    event:
+    - pull_request
+
+- name: publish
+  pull: always
+  image: plugins/docker:latest
+  settings:
+    context: v3.5
+    dockerfile: v3.5/Dockerfile.arm64v8
+    password:
+      from_secret: docker_password
+    repo: webhippie/python
+    tags: 3.5-arm64v8
+    username:
+      from_secret: docker_username
+  when:
+    event:
+    - push
+
+trigger:
+  ref:
+  - refs/heads/master
+  - "refs/pull/**"
+
+---
+kind: pipeline
+name: manifest-3.5
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+- name: manifest
+  pull: always
+  image: plugins/manifest:1
+  settings:
+    ignore_missing: true
+    password:
+      from_secret: docker_password
+    spec: v3.5/manifest.tmpl
+    username:
+      from_secret: docker_username
+
+trigger:
+  ref:
+  - refs/heads/master
+
+depends_on:
+- amd64-3.5
+- arm32v6-3.5
+- arm64v8-3.5
+
+---
+kind: pipeline
 name: amd64-2.7
 
 platform:
@@ -495,6 +811,8 @@ trigger:
 depends_on:
 - manifest-latest
 - manifest-3.7
+- manifest-3.6
+- manifest-3.5
 - manifest-2.7
 
 ---
@@ -523,6 +841,8 @@ trigger:
 depends_on:
 - manifest-latest
 - manifest-3.7
+- manifest-3.6
+- manifest-3.5
 - manifest-2.7
 
 ...
