--- a/v3.7/Dockerfile.arm64v8
+++ b/v3.7/Dockerfile.arm64v8
@@ -6,7 +6,7 @@ LABEL maintainer="Thomas Boerger <thomas@webhippie.de>" \
   org.label-schema.vendor="Thomas Boerger" \
   org.label-schema.schema-version="1.0"
 
-WORKDIR /srv/www
+WORKDIR /srv/app
 ENTRYPOINT ["/usr/bin/entrypoint"]
 CMD ["bash"]
 
