--- a/v3.7/Dockerfile.arm
+++ b/v3.7/Dockerfile.arm
@@ -1,20 +1,15 @@
-FROM webhippie/alpine:latest-arm32v6
-
-LABEL maintainer="Thomas Boerger <thomas@webhippie.de>" \
-  org.label-schema.name="Python" \
-  org.label-schema.version="3.7" \
-  org.label-schema.vendor="Thomas Boerger" \
-  org.label-schema.schema-version="1.0"
+FROM webhippie/alpine:latest-arm
 
 WORKDIR /srv/app
-ENTRYPOINT ["/usr/bin/entrypoint"]
-CMD ["bash"]
+
+# renovate: datasource=github-tags depName=python/cpython
+ENV PYTHON_VERSION=v3.7.12
 
 RUN apk update && \
   apk upgrade && \
   apk add build-base git expat-dev openssl-dev zlib-dev ncurses-dev bzip2-dev xz-dev sqlite-dev libffi-dev tcl-dev linux-headers gdbm-dev readline-dev && \
-  curl -sLo - https://www.python.org/ftp/python/3.7.3/Python-3.7.3.tgz | tar -xzf - -C /tmp && \
-  cd /tmp/Python-3.7.3 && \
+  curl -sLo - https://www.python.org/ftp/python/${PYTHON_VERSION#v}/Python-${PYTHON_VERSION#v}.tgz | tar -xzf - -C /tmp && \
+  cd /tmp/Python-${PYTHON_VERSION#v} && \
   ./configure --prefix=/usr --disable-rpath --enable-ipv6 --enable-loadable-sqlite-extensions --enable-shared --with-lto --with-computed-gotos --with-dbmliborder=gdbm:ndbm --with-system-expat --with-system-ffi --with-threads && \
   make && \
   make install && \
@@ -25,8 +20,9 @@ RUN apk update && \
   ln -sf /usr/bin/easy_install-3.7 /usr/bin/easy_install && \
   ln -sf /usr/bin/idle3.7 /usr/bin/idle && \
   cd && \
-  rm -rf /tmp/Python-3.7.3 && \
+  rm -rf /tmp/Python-${PYTHON_VERSION#v} && \
+  curl -sLo - https://bootstrap.pypa.io/get-pip.py | python && \
   pip install -U pip tox && \
   rm -rf /var/cache/apk/*
 
-COPY ./overlay ./overlay-arm32v6 /
+COPY ./overlay /
