--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,7 +8,8 @@
     "ignorePaths": [
         "archive/"
     ],
-    "packageRules": [{
+    "packageRules": [
+        {
             "datasources": [
                 "docker"
             ],
