--- a/v3.11/Dockerfile.arm
+++ b/v3.11/Dockerfile.arm
@@ -1,9 +1,9 @@
-FROM webhippie/alpine:latest-amd64@sha256:6c81ab82811af102f342c083a29162c7daba0daf2dffcd59aad75da6f916e254
+FROM webhippie/alpine:latest-arm@sha256:7bc3f2e9d2cb22220591733b62396f50642c0195b67bb992c9c13282691f6bc4
 
 WORKDIR /srv/app
 
 # renovate: datasource=github-tags depName=python/cpython
-ENV PYTHON_VERSION=v3.9.16
+ENV PYTHON_VERSION=v3.11.2
 
 RUN apk update && \
   apk upgrade && \
@@ -13,12 +13,12 @@ RUN apk update && \
   ./configure --prefix=/usr --disable-rpath --enable-ipv6 --enable-loadable-sqlite-extensions --enable-shared --with-lto --with-computed-gotos --with-dbmliborder=gdbm:ndbm --with-system-expat --with-system-ffi --with-threads && \
   make && \
   make install && \
-  ln -sf /usr/bin/python3.9 /usr/bin/python && \
-  ln -sf /usr/bin/pip3.9 /usr/bin/pip && \
-  ln -sf /usr/bin/python3.9m-config /usr/bin/python-config && \
-  ln -sf /usr/bin/pydoc3.9 /usr/bin/pydoc && \
-  ln -sf /usr/bin/easy_install-3.9 /usr/bin/easy_install && \
-  ln -sf /usr/bin/idle3.9 /usr/bin/idle && \
+  ln -sf /usr/bin/python3.11 /usr/bin/python && \
+  ln -sf /usr/bin/pip3.11 /usr/bin/pip && \
+  ln -sf /usr/bin/python3.11m-config /usr/bin/python-config && \
+  ln -sf /usr/bin/pydoc3.11 /usr/bin/pydoc && \
+  ln -sf /usr/bin/easy_install-3.11 /usr/bin/easy_install && \
+  ln -sf /usr/bin/idle3.11 /usr/bin/idle && \
   cd && \
   rm -rf /tmp/Python-${PYTHON_VERSION#v} && \
   curl -sLo - https://bootstrap.pypa.io/get-pip.py | python && \
