chore: enable ghcr registry pushs

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -44,5 +44,8 @@
                 "python/cpython"
             ]
         }
+    ],
+    "ignoreDeps": [
+        "docker/build-push-action"
     ]
 }
