--- a/archive/v2.7/Dockerfile.arm
+++ b/archive/v2.7/Dockerfile.arm
@@ -1,4 +1,4 @@
-FROM webhippie/alpine:latest-arm@sha256:e10b13e7c748a8eaebc84c16c8256252dfcfab9534536acda026d5605484f656
+FROM ghcr.io/dockhippie/alpine:latest-arm
 
 WORKDIR /srv/app
 
