--- a/archive/v3.5/Dockerfile.arm64
+++ b/archive/v3.5/Dockerfile.arm64
@@ -1,4 +1,4 @@
-FROM webhippie/alpine:latest-arm64@sha256:68db6867a55f3796140218fdd770e926141c9f77db57edc4545f63ba29f1fe9d
+FROM ghcr.io/dockhippie/alpine:latest-arm64
 
 WORKDIR /srv/app
 
