ci: try to enable swap for out of memory errors

--- a/.github/workflows/v3.11.yml
+++ b/.github/workflows/v3.11.yml
@@ -21,6 +21,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Create swap
+        uses: pierotofy/set-swap-space@master
+        with:
+          swap-size-gb: 10
+
       - name: Checkout source
         id: source
         uses: actions/checkout@v3
